# Quant-Bot-Phase-Two

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml
src/: __init__.py
src/factors/mean_reversion/: mean_reversion_signal.py  residual_loader.py  rolling_stats.py
src/factors/sentiment_velocity/: finnbert_classifier.py  sentiment_aggregator.py  sentiment_velocity.py
src/factors/valuation/: pb_ratio_fetcher.py  sector_ranker.py  value_score.py
src/ingestion/: fundamentals_collector.py  lseg_client.py  news_collector.py
src/normalization/: winsorize.py  zscore.py
src/pipeline/: factor_pipeline.py  schemas.py
src/utils/: cache.py  config.py  date_utils.py  logger.py
tests/: test_mean_reversion.py  test_pb_ratio.py  test_sentiment.py
